--- a/paginaHtml/index.html
+++ b/paginaHtml/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html</title>
+    <style>
+        .center{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+    <h1 class="center">Etiquetas escenciales de HTML</h1>
     
 </body>
 </html>
