--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <title>Pagina</title>
     <style>
         .center{
+            font-family: Arial;
             text-align: center;
         }
     </style>
 </head>
 <body>
     <h1 class="center">Etiquetas escenciales de HTML</h1>
-    
+    <br>
+    <p>Que es !DOCTYPE html <br>
+        -indica al navegador que el documento está escrito en HTML5 <br>
+    </p>
+
     
 </body>
 </html>
